--- a/Indego Analysis with Google Maps APIs.ipynb
+++ b/Indego Analysis with Google Maps APIs.ipynb
@@ -38,6 +38,7 @@
    "id": "a03f5621",
    "metadata": {},
    "source": [
+    "<br><br>\n",
     "## <a name=\"dataload\"></a> Load data and initialize API\n",
     "[Return to Top](#top)\n",
     "\n",
@@ -130,7 +131,8 @@
    "id": "632307e8",
    "metadata": {},
    "source": [
-    "## <a name=\"#addn\"></a> Add Neighborhood to station data, using Geocode API\n",
+    "<br><br>\n",
+    "## <a name=\"addn\"></a> Add Neighborhood to station data, using Geocode API\n",
     "[Return to Top](#top)\n",
     "\n",
     "- Get an overview of station data\n",
@@ -440,6 +442,7 @@
    "id": "22724e14",
    "metadata": {},
    "source": [
+    "<br><br>\n",
     "## <a name=\"stationdata\"></a> Analyze station data\n",
     "[Return to Top](#top)\n",
     "\n",
@@ -454,7 +457,6 @@
    "metadata": {},
    "source": [
     "<br>\n",
-    "\n",
     "Print a sorted list of neighborhoods by count of Indego stations"
    ]
   },
@@ -601,6 +603,7 @@
    "id": "58c36e99",
    "metadata": {},
    "source": [
+    "<br><br>\n",
     "## <a name=\"jointripdata\"></a> Join trip data with station data\n",
     "[Return to Top](#top)"
    ]
@@ -983,6 +986,7 @@
    "id": "be3cd0b7",
    "metadata": {},
    "source": [
+    "<br><br>\n",
     "## <a name=\"cleantripdata\"></a> Clean trip data\n",
     "[Return to Top](#top)"
    ]
@@ -1504,6 +1508,7 @@
    "id": "d4acb044",
    "metadata": {},
    "source": [
+    "<br><br>\n",
     "## <a name=\"analyzetripdata\"></a> Analyze trip data\n",
     "[Return to Top](#top)"
    ]
@@ -1513,8 +1518,7 @@
    "id": "ba6c1910",
    "metadata": {},
    "source": [
-    "<br>\n",
-    "\n",
+    "<br><br>\n",
     "**Which neighborhoods are most trips between?**"
    ]
   },
@@ -1566,63 +1570,22 @@
    "id": "57afeb9e",
    "metadata": {},
    "source": [
-    "<br>\n",
-    "\n",
+    "<br><br>\n",
     "**Which station has the fewest trips (start or end at that station)?**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 127,
    "id": "53d3b9f6",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sum</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>start_name</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4th &amp; Wood, Philadelphia, PA</th>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                              sum\n",
-       "start_name                       \n",
-       "4th & Wood, Philadelphia, PA   20"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['4th & Wood, Philadelphia, PA']\n"
+     ]
     }
    ],
    "source": [
@@ -1639,7 +1602,7 @@
     "grouped = grouped.append(add_to_grouped).groupby('start_name').sum()\n",
     "\n",
     "# Output the station with the lowest number of trips\n",
-    "grouped.nsmallest(1, \"sum\")"
+    "print(grouped.nsmallest(1, \"sum\").index.tolist())"
    ]
   },
   {
@@ -1654,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 130,
    "id": "b5500680",
    "metadata": {},
    "outputs": [
@@ -1721,7 +1684,7 @@
        "Schuylkill Banks Pergola, Philadelphia, PA   9571"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1732,9 +1695,111 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e66f0edb",
+   "metadata": {},
+   "source": [
+    "<br><br>\n",
+    "**What percentages of trips use standard vs electric bikes?**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "ee76be3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65.66% of 284,458 total trips used standard bikes\n",
+      "34.34% of 284,458 total trips used electric bikes\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_trips = len(ts_data)\n",
+    "e_trips = len(ts_data.loc[ts_data[\"bike_type\"] == \"electric\"])\n",
+    "s_trips = len(ts_data.loc[ts_data[\"bike_type\"] == \"standard\"])\n",
+    "\n",
+    "print(\"{:.2f}% of {:,} total trips used standard bikes\".format(s_trips / total_trips*100.0, total_trips))\n",
+    "print(\"{:.2f}% of {:,} total trips used electric bikes\".format(e_trips / total_trips*100.0, total_trips))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aac34173",
+   "metadata": {},
+   "source": [
+    "<br><br>\n",
+    "**What the mean trip time? How does it compare between trips taken using standard vs electric bikes?**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "89c95039",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean trip time was 16.86 minutes\n",
+      "Eletric bike ride trips were on average 18 seconds longer than standard trips\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean_trip_time = ts_data.loc[:, \"duration\"].mean()\n",
+    "mean_e_trip_time = ts_data.loc[ts_data[\"bike_type\"] == \"electric\", \"duration\"].mean()\n",
+    "mean_s_trip_time = ts_data.loc[ts_data[\"bike_type\"] == \"standard\", \"duration\"].mean()\n",
+    "\n",
+    "print(\"Mean trip time was {:0.2f} minutes\".format(mean_trip_time))\n",
+    "print(\"Eletric bike ride trips were on average {:0.0f} seconds longer than standard trips\".format((mean_e_trip_time - mean_s_trip_time) * 60))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6a703f3",
+   "metadata": {},
+   "source": [
+    "<br><br>\n",
+    "**Do riders with day passes favor standard or electric bikes?**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "ab05b285",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Day pass riders took 19,951 trips on standard bikes, 5,743 more than trips on electric bikes\n"
+     ]
+    }
+   ],
+   "source": [
+    "e_day_trips = len(ts_data.loc[(ts_data[\"bike_type\"] == \"electric\") & (ts_data[\"passholder_type\"] == \"Day Pass\")])\n",
+    "s_day_trips = len(ts_data.loc[(ts_data[\"bike_type\"] == \"standard\") & (ts_data[\"passholder_type\"] == \"Day Pass\")])\n",
+    "\n",
+    "if e_day_trips > s_day_trips:\n",
+    "    print(\"Day pass riders took {:,} trips on electric bikes, {:,} more than trips on standard bikes\".format(e_day_trips, e_day_trips - s_day_trips))\n",
+    "elif e_day_trips < s_day_trips:\n",
+    "    print(\"Day pass riders took {:,} trips on standard bikes, {:,} more than trips on electric bikes\".format(s_day_trips, s_day_trips - e_day_trips))\n",
+    "else:\n",
+    "    print(\"Day pass riders took an equal number of trips on standard and electric bikes, totaling {:,}\".format(s_day_trips + e_day_trips))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "834ad9b2",
    "metadata": {},
    "source": [
+    "<br><br>\n",
     "**How much revenue was generated in electric bike fees?**\n",
     "- Trips using an electric bike charge an extra $.15 per minute"
    ]
@@ -1742,7 +1807,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "26efac57",
+   "id": "079115d4",
    "metadata": {},
    "outputs": [
     {
@@ -1769,6 +1834,7 @@
    "id": "7f38493c",
    "metadata": {},
    "source": [
+    "<br><br>\n",
     "**How much revenue was generated in overage charges in Q321?** \n",
     "- Guest passes and walk up passes charge $.15 per minute after the first 30 minutes\n",
     "\n",
@@ -1777,7 +1843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26ac131f",
+   "id": "57671370",
    "metadata": {},
    "source": [
     "See how many of each passholder type is in the dataset"
@@ -1786,7 +1852,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "7a8f6d53",
+   "id": "9bd0dd69",
    "metadata": {},
    "outputs": [
     {
@@ -1812,7 +1878,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ba278fa",
+   "id": "369fce83",
    "metadata": {},
    "source": [
     "Calculate the overages based on trip duration and passholder type"
@@ -1821,7 +1887,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "52e9d840",
+   "id": "efe97071",
    "metadata": {},
    "outputs": [
     {
@@ -1848,10 +1914,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7a8cbbf",
+   "id": "7d2ecd5f",
    "metadata": {},
    "source": [
-    "<br><br>\n",
+    "\n",
     "Looking at some sample data below, verify the calculation worked properly\n",
     "- Row 12 was an 88 minute trip for a Day Pass user: (88-30)x(.15) = 8.70\n",
     "- Row 34 was a 62 minute trip for a monthly subscriber: (62-600x(.15) = .30"
@@ -1860,9 +1926,9 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "f74429a4",
+   "id": "cd69e309",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2076,32 +2142,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2472d25",
-   "metadata": {},
-   "source": [
-    "**Analysis below to be added**\n",
-    "\n",
-    "What percentage of trips use standard bikes vs electric bikes? Do certain stations favor electric bikes?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "58ecd701",
-   "metadata": {},
-   "source": [
-    "What is the average trip duration for standard bikes vs electric bikes?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a582ac14",
-   "metadata": {},
-   "source": [
-    "Do riders with day passes more often use standard or electric bikes?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "9fddce17",
    "metadata": {},
    "source": [
@@ -2259,14 +2299,6 @@
    "source": [
     "ts_data.groupby([\"start_station\", \"end_station\"]).size().reset_index(name='count')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70e251b8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
