--- a/Part 1 Enhance Indego Data with Google Maps APIs.ipynb
+++ b/Part 1 Enhance Indego Data with Google Maps APIs.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "<a name=\"top\"></a>\n",
-    "# Enhance Indego Data with Google Maps APIs\n",
+    "# Part 1: Enhance Indego Data with Google Maps APIs\n",
     "\n",
     "Indego publishes quarterly data on city bike usage. The following will clean the data, enhance it with additional information, and store it locally so it can be used for future analysis.\n",
     "\n",
