--- a/Part 1 Enhance Indego Data with Google Maps APIs.ipynb
+++ b/Part 1 Enhance Indego Data with Google Maps APIs.ipynb
@@ -14,7 +14,7 @@
     "- Neighborhood information for each bike station\n",
     "- Distance between stations, following bike routes\n",
     "\n",
-    "The following will *(if viewing thru GitHub, jump to links below will not work)*<br>\n",
+    "The following will *(open with [nbviewer](#https://nbviewer.org/github/MichaelStinson/Indego-City-Bikes-with-Google-Maps-API-using-Python/blob/main/Part%201%20Enhance%20Indego%20Data%20with%20Google%20Maps%20APIs.ipynb) to use jump to links below)*<br>\n",
     "- [Load station data](#loadstation)\n",
     "- [Add Neighborhood to station data, using Geocode API](#addneighborhood)\n",
     "- [Write enhanced station data to a csv](#writestationdata)\n",
