--- a/Part 2 Indego Data Analysis with SQL.ipynb
+++ b/Part 2 Indego Data Analysis with SQL.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "20234b06",
+   "id": "3165a26f",
    "metadata": {},
    "source": [
     "# Part 2: Indego Data Analysis with SQL\n",
     "\n",
-    "Jump to\n",
+    "Jump to a specific section:\n",
+    "<br> *(view thru [nbviewer](https://nbviewer.org/github/MichaelStinson/Indego-City-Bikes-with-Google-Maps-API-using-Python/blob/main/Part%202%20Indego%20Data%20Analysis%20with%20SQL.ipynb) to use jump to links below)*<br>\n",
     "- [Data overview](#Data-overview)\n",
     "- [Analyze station data](#Analyze-station-data)\n",
     "- [Join trip data with distance data](#Join-trip-data-with-distance-data)"
@@ -15,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4635feb6",
+   "id": "39cb373c",
    "metadata": {},
    "source": [
     "## Data overview\n",
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16a18bd3",
+   "id": "120f9186",
    "metadata": {},
    "source": [
     "<br>Load the db"
@@ -33,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "af141789",
+   "id": "2ce8764a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9da517f3",
+   "id": "af7ee597",
    "metadata": {},
    "source": [
     "<br>Print the list of tables"
@@ -53,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f3f7d7ba",
+   "id": "2f10da24",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d0e0dd2",
+   "id": "77aa84c3",
    "metadata": {},
    "source": [
     "<br>Print the first few rows from each table"
@@ -131,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "08a00c71",
+   "id": "be712392",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "14e027ce",
+   "id": "9e061925",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "44e73175",
+   "id": "d834f225",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c0946f70",
+   "id": "dfd7601e",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8e8f25da",
+   "id": "dbb93e68",
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fa9633f6",
+   "id": "627e9db4",
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "515a192f",
+   "id": "17bb94c7",
    "metadata": {},
    "source": [
     "## Analyze station data\n",
@@ -597,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccdc6362",
+   "id": "a1a765fc",
    "metadata": {},
    "source": [
     "<br>Get a list of all neighborhoods and the count of Indego stations"
@@ -606,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ae3d2a7a",
+   "id": "93486655",
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f66b6d23",
+   "id": "82fd2ccf",
    "metadata": {},
    "source": [
     "<br>See how many stations are in Center City, inclusive of those with East/West suffixes"
@@ -818,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "55546cc6",
+   "id": "326cc6f5",
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c41618f1",
+   "id": "43d8614a",
    "metadata": {},
    "source": [
     "<br>Are any stations inactive?"
@@ -872,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4dcc75a3",
+   "id": "15577d5c",
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1060,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1f79f88",
+   "id": "2cb766a4",
    "metadata": {},
    "source": [
     "<br>Find the top ten neighborhoods by active stations. Treat all Center City stations as a single neighborhood"
@@ -1068,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "8c1ea36d",
+   "id": "a144e285",
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd61f3d9",
+   "id": "2fa446e8",
    "metadata": {},
    "source": [
     "## Join trip data with distance data\n",
@@ -1183,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "538d05d8",
+   "id": "b4d144cd",
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0490401",
+   "id": "6d31469d",
    "metadata": {},
    "outputs": [],
    "source": []
