--- a/Part 1 Enhance Indego Data with Google Maps APIs.ipynb
+++ b/Part 1 Enhance Indego Data with Google Maps APIs.ipynb
@@ -14,8 +14,8 @@
     "- Neighborhood information for each bike station\n",
     "- Distance between stations, following bike routes\n",
     "\n",
-    "Jump to\n",
-    "<br> *(open with [nbviewer](https://nbviewer.org/github/MichaelStinson/Indego-City-Bikes-with-Google-Maps-API-using-Python/blob/main/Part%201%20Enhance%20Indego%20Data%20with%20Google%20Maps%20APIs.ipynb) to use jump to links below)*<br>\n",
+    "Jump to a specific section:\n",
+    "<br> *(view thru [nbviewer](https://nbviewer.org/github/MichaelStinson/Indego-City-Bikes-with-Google-Maps-API-using-Python/blob/main/Part%201%20Enhance%20Indego%20Data%20with%20Google%20Maps%20APIs.ipynb) to use jump to links below)*<br>\n",
     "- [Load station data](#loadstation)\n",
     "- [Add Neighborhood to station data, using Geocode API](#addneighborhood)\n",
     "- [Write enhanced station data to a csv](#writestationdata)\n",
@@ -24,9 +24,8 @@
     "- [Join trip data with station data](#jointripdata)\n",
     "- [Calculate distance for each trip, using Distance Matrix API](#distancedata)\n",
     "- [Write enhanced trip data to a csv](#writetripdata)\n",
-    "- [Store data as a SQL database](#Store-data-as-a-SQL-database)\n",
     "\n",
-    "<a href=\"http://example.com/\" target=\"_blank\">Hello, world!</a>"
+    "<br>In Part 2, this data will be stored in a SQLite database for future analysis"
    ]
   },
   {
@@ -2331,19 +2330,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3006cb4c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "ed637504",
    "metadata": {},
    "source": [
-    "<br><br>\n",
+    "## <br><br>***To be removed - see Part 2 for updates***\n",
     "## <a name=\"storeassqldb\"></a>Store data as a SQL database\n",
     "[Return to Top](#top)\n",
     "\n",
