--- a/Part 3 Indego Data Analysis with SQL and Pandas.ipynb
+++ b/Part 3 Indego Data Analysis with SQL and Pandas.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "21c547c2",
+   "id": "aefb8352",
    "metadata": {},
    "source": [
-    "# Part 3: Indego Data Analysis with SQL\n",
+    "# Part 3: Indego Data Analysis with SQL and Pandas\n",
     "\n",
     "Jump to a specific section:\n",
     "<br> *(jump to does not work if viewing thru GitHub)*<br>\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "169d8b47",
+   "id": "d68fe879",
    "metadata": {},
    "source": [
     "## Data overview\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f84bbbbc",
+   "id": "0d0d0c84",
    "metadata": {},
    "source": [
     "<br>Load the db"
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4bc022d6",
+   "id": "671f9fe0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b006745",
+   "id": "fc764faa",
    "metadata": {},
    "source": [
     "<br>Print the list of tables"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "28a7e883",
+   "id": "a81e7d60",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77770252",
+   "id": "af2a4a49",
    "metadata": {},
    "source": [
     "<br>Print the first few rows from each table"
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9b74d719",
+   "id": "9d4e536e",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4759963c",
+   "id": "bcfe8b56",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f8c890be",
+   "id": "cfeda447",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "aae0f1bc",
+   "id": "8a04ff90",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c8721fd5",
+   "id": "bf7be32e",
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4897b74f",
+   "id": "5af16991",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abbde6d2",
+   "id": "38072335",
    "metadata": {},
    "source": [
     "## Analyze station data\n",
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "090dfbf6",
+   "id": "ec5c6586",
    "metadata": {},
    "source": [
     "<br>Get a list of all neighborhoods and the count of Indego stations"
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "4a5d6a7a",
+   "id": "e401102f",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d01958db",
+   "id": "520f1195",
    "metadata": {},
    "source": [
     "<br>See how many stations are in Center City, inclusive of those with East/West suffixes"
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "995f5e66",
+   "id": "6195ba40",
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f95b01b",
+   "id": "bf9c1175",
    "metadata": {},
    "source": [
     "<br>Are any stations inactive?"
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ba4d6a27",
+   "id": "5c073376",
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9d7f6e4",
+   "id": "0af6df07",
    "metadata": {},
    "source": [
     "<br>Find the top ten neighborhoods by active stations. Treat all Center City stations as a single neighborhood"
@@ -1071,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "d9ea24a1",
+   "id": "ebdd2acd",
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5919414f",
+   "id": "bd86bb7f",
    "metadata": {},
    "source": [
     "## Join trip data with distance data\n",
@@ -1186,7 +1186,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "ba89839e",
+   "id": "e2859d2f",
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "ccf3dd43",
+   "id": "470b97cf",
    "metadata": {},
    "outputs": [
     {
@@ -1529,7 +1529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f02d8671",
+   "id": "c6336911",
    "metadata": {},
    "source": [
     "## Analyze trip data\n",
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fee7fe2f",
+   "id": "5955e9a6",
    "metadata": {},
    "source": [
     "<br>Which neighborhoods are the most trips between?"
@@ -1547,7 +1547,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "231e0d95",
+   "id": "9fce059e",
    "metadata": {},
    "outputs": [
     {
@@ -7255,7 +7255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca119688",
+   "id": "137d07e6",
    "metadata": {},
    "source": [
     "<br>The same query, but filtering out results where start and end neighborhood match"
@@ -7264,7 +7264,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "0cf83f2f",
+   "id": "9cc704e6",
    "metadata": {},
    "outputs": [
     {
@@ -7370,7 +7370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "738d23f2",
+   "id": "db5bc43e",
    "metadata": {},
    "source": [
     "<br>Which station has the fewest trips (start or end)?"
@@ -7379,7 +7379,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "0332c179",
+   "id": "f6b40b10",
    "metadata": {},
    "outputs": [
     {
@@ -7463,7 +7463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbf5b2d1",
+   "id": "8b558abf",
    "metadata": {},
    "source": [
     "## Analyze trip data for standard vs electric bikes\n",
@@ -7472,7 +7472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5478c379",
+   "id": "590093fe",
    "metadata": {},
    "source": [
     "<br>What percentages of trips use standard vs electric bikes?"
@@ -7481,7 +7481,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "c0318294",
+   "id": "087b05e9",
    "metadata": {
     "scrolled": true
    },
@@ -7541,7 +7541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bd31b03",
+   "id": "819001be",
    "metadata": {},
    "source": [
     "<br>**Broken down by year,** what percentages of trips use standard vs electric bikes?"
@@ -7550,7 +7550,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "8831c2ba",
+   "id": "d98a448b",
    "metadata": {},
    "outputs": [
     {
@@ -7584,7 +7584,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "56734ae2",
+   "id": "60465000",
    "metadata": {},
    "outputs": [
     {
@@ -7683,7 +7683,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "99da5a30",
+   "id": "d3e3d317",
    "metadata": {},
    "outputs": [
     {
@@ -7802,7 +7802,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "a0bd0346",
+   "id": "2f9ed964",
    "metadata": {},
    "outputs": [
     {
@@ -7832,7 +7832,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "830cb030",
+   "id": "3c7556e0",
    "metadata": {},
    "outputs": [
     {
@@ -7861,7 +7861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35455a8d",
+   "id": "49ee35e5",
    "metadata": {},
    "source": [
     "<br>How does mean trip time and distance between start and end station compare when using standard vs electric bikes?"
@@ -7870,14 +7870,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa314850",
+   "id": "c5342453",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b02e983f",
+   "id": "80902f8b",
    "metadata": {},
    "source": [
     "<br>Do riders with day passes favor standard or electric bikes?"
@@ -7886,7 +7886,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c8354ca",
+   "id": "2650fd0d",
    "metadata": {},
    "outputs": [],
    "source": []
